# custom-gateway

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TOKEN_SCHEDULER.md  config.yaml  config.yaml.example  lcov.info  permata-gateway-flowchart.drawio  sonar-project.properties
.claude/: settings.local.json
.scannerwork/: report-task.txt
scripts/: coverage.bat  coverage.sh  sonar.sh  test.bat  test.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/handlers/: mod.rs  webhook_server.rs
src/mocks/: mod.rs
src/models/: mod.rs
src/providers/: logging.rs
src/services/: mod.rs  permata_callbackstatus_client.rs  permata_login.rs  telegram_alert.rs  token_scheduler.rs  webhook_processor.rs
src/utils/: error.rs  json.rs  mod.rs  request_id.rs  signature.rs
tests/: README.md  config_tests.rs  integration_test_suite.rs  integration_tests.rs  json_utils_tests.rs  lib.rs  login_tests.rs  signature_tests.rs  test_logging.rs  unit_tests.rs  webhook_processor.rs
tests/integration/: built_in_tests.rs  integration_test_suite.rs  integration_tests.rs  mod.rs
tests/services/: mod.rs  token_scheduler_edge_cases.rs  token_scheduler_periodic_debug.rs  token_scheduler_periodic_tests.rs
tests/unit/: mod.rs
tests/unit/config/: config_tests.rs
tests/unit/handlers/: mod.rs
tests/unit/models/: mod.rs  model_tests.rs
tests/unit/providers/: test_logging.rs
tests/unit/services/: login_tests.rs  mod.rs  permata_callbackstatus_client_tests.rs  telegram_alert_tests.rs  token_scheduler_edge_cases.rs  token_scheduler_periodic_debug.rs  token_scheduler_periodic_tests.rs  token_scheduler_tests.rs  webhook_processor.rs
tests/unit/utils/: error_tests.rs  json_utils_tests.rs  mod.rs  request_id_tests.rs
