[package]
name = "webhook-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
config = "0.14"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
wiremock = "0.6"
http = "1.0"
tempfile = "3.0"

# Test configurations
[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"
harness = true

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"
harness = true
